Fix overlap of course sidebar text.

--- a/app/assets/stylesheets/components/_course_sidebar.scss
+++ b/app/assets/stylesheets/components/_course_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar-course-title-container {
   position: relative;
   background: $charcoal;
-  padding: $sm $lg;
+  padding: $sm $xxxl;
   justify-content: space-between;
 }
 
@@ -20,7 +20,7 @@
 
 .sidebar-back-button {
   position: absolute;
-  left: $lg;
+  left: $md;
   font-size: $md;
   padding-right: $sm;
   color: $white;
@@ -31,7 +31,7 @@
     &::after {
       color: $white;
       position: absolute;
-      right: 10px;
+      right: 8px;
       content: "BACK";
       font-size: 12px;
       font-weight: $bold;
